[gd_scene load_steps=28 format=3 uid="uid://c433jbwbf30gy"]

[ext_resource type="Script" path="res://Scripts/Player/player.gd" id="1_esbea"]
[ext_resource type="Texture2D" uid="uid://bp5jw1qtk7hx" path="res://AnimationSheet/PlayerSheet.png" id="2_csmvn"]
[ext_resource type="Texture2D" uid="uid://cnh1ssjvupjsg" path="res://AnimationSheet/PlayerCombatSheet.png" id="3_my31x"]
[ext_resource type="Script" path="res://Scripts/StateMachine/StateMachine.gd" id="5_6h4n1"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerFalling.gd" id="6_ke4sl"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerJump.gd" id="7_shb1f"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerIdle.gd" id="8_hv6uj"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerWallJump.gd" id="9_bswbk"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerDash.gd" id="9_m02tr"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerWalk.gd" id="9_r3uj6"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerDoubleJump.gd" id="10_n1o6u"]
[ext_resource type="Script" path="res://Scripts/Attack.gd" id="12_ngi1g"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerAttack.gd" id="12_yrwvf"]
[ext_resource type="Script" path="res://Scripts/FacingCollisionShape.gd" id="14_mnynt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_24h6m"]
size = Vector2(16, 41)

[sub_resource type="Animation" id="Animation_i7b37"]
resource_name = "Attack"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_my31x")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [43]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [170, 171, 172, 173, 174, 175]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AttackArea:monitoring")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.3, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_hq3jq"]
resource_name = "Dash"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_csmvn")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [44]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [182, 183, 184, 185]
}

[sub_resource type="Animation" id="Animation_iy88o"]
resource_name = "Falling"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_csmvn")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [44]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [84, 98]
}

[sub_resource type="Animation" id="Animation_k4sbi"]
resource_name = "Idle"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_csmvn")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [44]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17, 18, 19, 20]
}

[sub_resource type="Animation" id="Animation_osjsg"]
resource_name = "Jump"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_csmvn")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [44]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [70]
}

[sub_resource type="Animation" id="Animation_7akpq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_csmvn")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [43]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AttackArea:monitoring")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_nutpe"]
resource_name = "Walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [44]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_csmvn")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [56, 57, 58, 59, 60, 61, 62, 63]
}

[sub_resource type="Animation" id="Animation_3v485"]
resource_name = "WallSlide"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_csmvn")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [44]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [252, 253, 254, 255, 256, 257]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hqtqw"]
_data = {
"Attack": SubResource("Animation_i7b37"),
"Dash": SubResource("Animation_hq3jq"),
"Falling": SubResource("Animation_iy88o"),
"Idle": SubResource("Animation_k4sbi"),
"Jump": SubResource("Animation_osjsg"),
"RESET": SubResource("Animation_7akpq"),
"Walk": SubResource("Animation_nutpe"),
"WallSlide": SubResource("Animation_3v485")
}

[sub_resource type="Curve" id="Curve_hnk24"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.469989), -1.7667, 0.0, 0, 0]
point_count = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mo7b2"]
size = Vector2(0, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_05ffp"]
size = Vector2(8, 7)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_esbea")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_csmvn")
hframes = 10
vframes = 43

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 21.5)
shape = SubResource("RectangleShape2D_24h6m")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hqtqw")
}

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("5_6h4n1")
initial_state = NodePath("PlayerIdle")

[node name="PlayerFalling" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("6_ke4sl")
player = NodePath("../..")

[node name="PlayerJump" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("7_shb1f")
player = NodePath("../..")

[node name="PlayerIdle" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("8_hv6uj")
player = NodePath("../..")

[node name="PlayerWalk" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("9_r3uj6")
player = NodePath("../..")

[node name="PlayerDash" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("9_m02tr")
player = NodePath("../..")
dash_curve = SubResource("Curve_hnk24")

[node name="PlayerWallSlide" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("9_r3uj6")
player = NodePath("../..")

[node name="PlayerWallJump" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("9_bswbk")
player = NodePath("../..")

[node name="PlayerDoubleJump" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("10_n1o6u")
player = NodePath("../..")

[node name="PlayerAttack" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("12_yrwvf")
player = NodePath("../..")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8
autostart = true

[node name="WallCollider" type="RayCast2D" parent="."]
position = Vector2(0, 20)
target_position = Vector2(10, 0)
collision_mask = 2

[node name="StairCollider2" type="RayCast2D" parent="."]
position = Vector2(10, 41)
target_position = Vector2(0, 3)
collision_mask = 4

[node name="StairCollider" type="RayCast2D" parent="."]
position = Vector2(5, 41)
target_position = Vector2(4, 0)
collision_mask = 4

[node name="RoomDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomDetector"]
shape = SubResource("RectangleShape2D_mo7b2")

[node name="AttackArea" type="Area2D" parent="." node_paths=PackedStringArray("player", "facing_shape")]
monitoring = false
script = ExtResource("12_ngi1g")
player = NodePath("..")
facing_shape = NodePath("CollisionShape2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(22, 13.5)
shape = SubResource("RectangleShape2D_05ffp")
script = ExtResource("14_mnynt")
facing_left_position = Vector2(-22, 0)
facing_right_position = Vector2(22, 0)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="RoomDetector" to="." method="_on_room_detector_area_entered"]
[connection signal="area_exited" from="RoomDetector" to="." method="_on_room_detector_area_exited"]
[connection signal="body_entered" from="AttackArea" to="AttackArea" method="_on_body_entered"]
